--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # These are intellij project files
 /penguin/*.iml
-/penguin/.idea
+/penguin/.idea/*
 
 # This is a cache for gradle
-/penguin/.gradle
+/penguin/.gradle/*
 
 # These are compiled artifacts
-/penguin/build
+/penguin/build/*
 
 # This is where intellij builds the project
-/penguin/out
+/penguin/out/*
