--- a/Sprint2Demo/Dockerfile
+++ b/Sprint2Demo/Dockerfile
@@ -6,22 +6,22 @@
 FROM openjdk:8
 
 # Add our application logic and ALL our dependencies into the docker image
-ADD build/distributions/skeleton.tar  /
+ADD build/distributions/Sprint2Demo.tar  /
 
 # The .tar file that gradle builds includes everything in src/main, but we also need
 # our appconfig.yml (which is not part of the .tar that gradle builds) so we must
 # add it explicitly
-ADD appconfig.yml /skeleton/
+ADD appconfig.yml /Sprint2Demo/
 
 # Add your GCP Service Account API File to the Docker Image
-ADD gc_api_file.json /skeleton/gc_api_file.json
-ENV GOOGLE_APPLICATION_CREDENTIALS=/skeleton/gc_api_file.json
+ADD gc_api_file.json /Sprint2Demo/gc_api_file.json
+ENV GOOGLE_APPLICATION_CREDENTIALS=/Sprint2Demo/gc_api_file.json
 
 # Convenience if we ever want to log into the image and snoop around
-WORKDIR /skeleton
+WORKDIR /Sprint2Demo
 
 # The server is runs on 8080 inside the running container, so we need to expose that port
 EXPOSE 8080
 
 # When a new container is created, the server program should be run.
-ENTRYPOINT ["/skeleton/bin/skeleton", "server", "appconfig.yml"]
+ENTRYPOINT ["/Sprint2Demo/bin/Sprint2Demo", "server", "appconfig.yml"]
