--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+bcrypt==3.1.4
 certifi==2016.2.28
+cffi==1.11.2
 click==6.7
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+pycparser==2.18
+six==1.11.0
 SQLAlchemy==1.1.14
 Werkzeug==0.12.2
